[package]
name = "fmc"
version = "0.1.0-r2-g1ef56b2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
spinners = "4.1.0"
serde_json = { version = "1.0.89", default-features = false }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "rustls-tls"] }
bat = { version = "0.22.1", default-features = false, features = ["regex-onig"] }
colored = "2.0.0"
question = "0.2.2"